# game_of_life_no_std

./: Cargo.toml
src/: canvas.rs  main.rs
