[package]
name = "conways_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "*"

[profile.release]
debug = false
strip = true
opt-level = 's'
codegen-units = 1
lto = true
panic = 'abort'

[profile.dev]
lto = true
opt-level = 's'
panic = 'abort'
